# DNRemote

./: .gitmodules  README.md  build_deb.sh
Android/: .gitignore  .project  AndroidManifest.xml  build.xml  project.properties
Android/res/layout/: fragment_desktop_editor.xml  fragment_desktop_selection.xml  fragment_progress_dialog.xml  listitem_serverselection.xml  main.xml
Android/res/menu/: serverselection_menu.xml
Android/res/values/: color.xml  strings.xml  styles.xml
Android/src/com/v2soft/dnremote/: ApplicationSettings.java  DNAndroidClientActivity.java  DNRemoteApplication.java  IPCConstants.java
Android/src/com/v2soft/dnremote/dao/: JSONSerializable.java  PointerEvent.java  Server.java  Storage.java
Android/src/com/v2soft/dnremote/networking/: BroadcastDiscovery.java
Android/src/com/v2soft/dnremote/ui/activities/: DNAndroidClientActivity.java  DesktopsEditorActivity.java  DesktopsScanActivity.java  DesktopsSelectionActivity.java
Android/src/com/v2soft/dnremote/ui/fragments/: DesktopsEditorFragment.java  DesktopsScannerFragment.java  (+2 more)
linserver/: .cproject  .gitignore  .project  CMakeLists.txt  t1.c
linserver/debian/: README  README.Debian  README.source  changelog  control  copyright  dnremoteserver.cron.d.ex  dnremoteserver.default.ex  dnremoteserver.doc-base.EX  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
linserver/src/: AppSettings.cpp  CMakeLists.txt  EventStruct.h  Main.cpp  MouseEventFiles.cpp  MouseEventFiles.h  UdpListener.cpp  UdpListener.h
server/libs/jsoncpp/: CMakeLists.txt
server/libs/jsoncpp/src/lib_json/: CMakeLists.txt
server/macosx/: .cproject  .project  CMakeLists.txt  test.c
server/macosx/src/: AppSettings.h  CMakeLists.txt  Main.cpp  MouseEventFiles.cpp  MouseEventFiles.h  UdpListener.cpp  UdpListener.h
winserver/: .checkstyle  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  DNRemoteServer.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
winserver/src/: CMakeLists.txt  EventStruct.h  Main.cpp  MouseEventFiles.cpp  MouseEventFiles.h
